Issue #2164081 by johnv: Removed code that hides Workflow Form on unpublished nodes.
Issue #2241577 by johnv: Removed dependency on Features module. Now you can enable a workflow feature without!
Issue #2217291: Added new view + view_mode 'history_tab', to create customizable tab, for multiple workflows.
Issue #0443094: Fixed typo in workflow_admin_paths_alter().
Issue #2241577 by preddy: Added check for existing workflow in WorkflowConfigTransition::save().
Issue #2243569: Added inline documentation for usage of workflow_get_workflows_by_type with multiple workflows per node type.
Issue #2243997: Added refreshed default views in workflow_views under /workflow/ path.
Issue #2217291: Fixed workflow_views for installations with D7<7.22.
Issue #2240009: Moved current tokens to submodule 'workflownode' to prepare for workflow_field tokens.
Issue #2240009: Added better readable 'chained' tokens, re-using tokens of core objects.
Issue #2237125: Removed token 'workflow-state-age' from workflow_extensions, since it is now available as a chained token.
Issue #2240009: Removed dpm().
Issue #2226781: Fixed error on type_map admin page for PHP5.4
Issue #2226781: Fixed warnings for PHP5.4 using reset().
Issue #2241577: Added machine_name to Workflow, influencing features.
Issue #2240009: Removed dpm().
Issue #2240009: Fixed 'chained' tokens now also workf when saving entities.
Issue #2226781: Fixed new states add added at end of state list.
Issue #0073412: Fixed a long-standing issue by adding a machine_name and label for Transitions! Many thanks to workflow_named_transitions.
Issue #0073412: Removed hardcoded text on action buttons, since they can be set with Transition labels, now.
Issue #2019345: Fixed constructor of WorkflowConfigTransition.
Issue #0744272: Added new hook to allow freely definable transitions per state.
Issue #0744272: Fixed sort order of states in Workflow Form was not according to states weight.